--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
@@ -37,7 +37,7 @@
                     <Button Click="Button_Click_Export" Margin="0,0,2,0">
                         <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageSave}" />
                     </Button>
-                    <Button Content="{x:Static properties:Resources.Search}" Click="SearchAdvanced_Click" Margin="0,0,2,0"/>
+                    <Button Content="{x:Static properties:Resources.Inquire}" Click="SearchAdvanced_Click" Margin="0,0,2,0"/>
                     <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="Search1_Click" Margin="0,0,2,0"/>
                 </ToolBar>
             </ToolBarTray>
