--- a/Engine/ColorVision.Engine/Templates/TemplateEditorWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/TemplateEditorWindow.xaml
@@ -89,6 +89,7 @@
                         <MenuItem Header="{x:Static properties:Resources.MenuDelete}" Command="ApplicationCommands.Delete" />
                         <MenuItem Header="{x:Static properties:Resources.MenuRename}"  Click="MenuItem_Click" Tag="{Binding .}" />
                         <MenuItem Header="创建副本"  Click="Button_CreateCopy_Click" Tag="{Binding .}"  />
+                        <MenuItem Header="创建为样例"  Click="CreateTemplate_Click" Tag="{Binding .}"  />
                     </ContextMenu>
                 </ListView.Resources>
                 <ListView.ItemContainerStyle>
@@ -151,13 +152,13 @@
                 <Button  Click="Button_New_Click" Margin="0,0,5,0" >
                     <TextBlock Text="{x:Static properties:Resources.New}"/>
                 </Button>
-                <Button   Click="Button_Del_Click"  Margin="0,0,5,0" >
+                <Button  Click="Button_Del_Click"  Margin="0,0,5,0" >
                     <TextBlock Text="{x:Static properties:Resources.Delete}"/>
                 </Button>
-                <Button   Click="Button_Save_Click" Margin="0,0,5,0"  >
+                <Button  Click="Button_Save_Click" Margin="0,0,5,0"  >
                     <TextBlock Text="{x:Static properties:Resources.Save}"/>
                 </Button>
-                <Button    Click="Button_Export_Click" Margin="0,0,5,0" >
+                <Button  Click="Button_Export_Click" Margin="0,0,5,0" >
                     <TextBlock Text="{x:Static properties:Resources.Export}"/>
                 </Button>
                 <Button Click="Button_Import_Click"  >
