--- a/ColorVision/MainWindow.xaml
+++ b/ColorVision/MainWindow.xaml
@@ -85,7 +85,7 @@
                
                 
                 <Image Source="{DynamicResource DrawingImageUser}" Width="20" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-                <Button Background="Transparent" BorderThickness="0"  Width="20"   HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                <Button Background="Transparent" BorderThickness="0"  Width="20"   HorizontalAlignment="Right" Click="Button_Click" Margin="0,0,10,0"/>
             </Grid>
         </Border>
 
