--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/InfoAlgorithm.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/InfoAlgorithm.xaml
@@ -91,6 +91,10 @@
                     <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,2">
+                                <TextBlock Text="Code" Width="120"/>
+                                <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Code}"/>
+                            </DockPanel>
+                            <DockPanel Margin="0,2">
                                 <TextBlock Text="SN" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.SN}"/>
                             </DockPanel>
