--- a/ColorVision/Wizards/WizardWindow.xaml
+++ b/ColorVision/Wizards/WizardWindow.xaml
@@ -11,6 +11,7 @@
         d:DataContext="{d:DesignInstance local:WizardWindowConfig}"
         Title="{x:Static properties:Resources.SetupWizard}"  Height="550" Width="800" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
     <Window.Resources>
+        <local:BooleanToBrushConverter x:Key="BooleanToBrushConverter" />
         <PathGeometry x:Key="CheckMarkGeometry" Figures="M 1,3 C1,3 1,6 1,6 1,6 4,9 4,9 4,9 9,3 9,3 9,3 9,0 9,0 9,0 4,6 4,6 4,6 1,3 1,3 z" />
         <PathGeometry x:Key="CrossMarkGeometry">
             <PathFigure StartPoint="1,1">
@@ -32,28 +33,19 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </Window.Resources>
-    <Grid Margin="5">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="5">
-            <TextBlock Text="请按照顺序配置启动项"/>
-            <DockPanel HorizontalAlignment="Right">
-                <TextBlock Text="查看方式" Width="70"/>
-                <ComboBox x:Name="ComboBoxWizardType" SelectedValue="{Binding WizardShowType}" Width="100"/>
-            </DockPanel>
-        </Grid>
-        <Grid Grid.Row="1"  Visibility="{Binding IsList,Converter={StaticResource bool2VisibilityConverter1}}">
-            <UniformGrid x:Name="WizardStackPanel" Grid.Row="1" Margin="10" Columns="3"/>
-        </Grid>
+
         <Grid Grid.Row="1" Visibility="{Binding IsList,Converter={StaticResource bool2VisibilityConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="300"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <ListView x:Name="ListWizard" Background="Transparent" BorderThickness="0" Grid.Column="0">
+            <ListView x:Name="ListWizard" Background="Transparent"  BorderThickness="0" Grid.Column="0">
                 <ListView.View>
                     <GridView>
                         <GridView.ColumnHeaderContainerStyle>
@@ -63,12 +55,13 @@
                                 <Setter Property="BorderThickness" Value="0"/>
                             </Style>
                         </GridView.ColumnHeaderContainerStyle>
-                        <GridViewColumn Width="250">
+                        <GridViewColumn >
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate DataType="{x:Type ui:IWizardStep}">
-                                    <StackPanel Orientation="Horizontal">
+                                    <StackPanel Orientation="Horizontal" Background="{Binding ConfigurationStatus,Converter={StaticResource BooleanToBrushConverter}}">
                                         <TextBlock Text="{Binding ConfigurationStatus}"/>
                                         <TextBlock Text="{Binding Header}"/>
+                                        <TextBlock Text="✔️"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
@@ -77,8 +70,7 @@
                 </ListView.View>
             </ListView>
 
-
-            <Border x:Name="BorderContent" Style="{DynamicResource BorderModuleArea}" CornerRadius="5" Margin="0,5,5,5" d:DataContext="{d:DesignInstance ui:IWizardStep}" Grid.Column="1">
+            <Border x:Name="BorderContent" Style="{DynamicResource BorderModuleArea}" CornerRadius="5" Margin="0,0,5,5" d:DataContext="{d:DesignInstance ui:IWizardStep}" Grid.Column="1">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="40"/>
