--- a/ColorVision/Plugins/PluginManagerWindow.xaml
+++ b/ColorVision/Plugins/PluginManagerWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Plugins"
         xmlns:properties="clr-namespace:ColorVision.Properties"
+        xmlns:hc ="https://handyorg.github.io/handycontrol"
         d:DataContext="{d:DesignInstance local:PluginManager}"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.PluginManagerWindow}" Background="{DynamicResource GlobalBackground}" Height="450" Width="800" Initialized="Window_Initialized">
@@ -16,12 +17,12 @@
         <StackPanel Orientation="Horizontal" Margin="5">
             <Button Content="仓库" Command="{Binding OpenStoreCommand}" Margin="0,0,5,0"/>
             <Button Content="安装包" Command="{Binding InstallPackageCommand}" Margin="0,0,5,0"/>
-            <TextBox Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,5,0"/>
+            <hc:ComboBox x:Name="DefalutSearchComboBox" Width="100" HorizontalAlignment="Left"  IsEditable="True" Margin="0,0,5,0" Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.ShowClearButton="True"/>
             <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="0,0,5,0"/>
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="385"/>
+                <ColumnDefinition Width="450"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <ListView x:Name="ListViewPlugins" Background="Transparent" ItemsSource="{Binding Plugins}" Margin="5,0,5,5"  SelectionChanged="ListViewPlugins_SelectionChanged" Grid.Row="1" Padding="2">
