--- a/Engine/ColorVision.Engine/Templates/ARVR/MTF/DisplayMTF.xaml
+++ b/Engine/ColorVision.Engine/Templates/ARVR/MTF/DisplayMTF.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColorVision.Engine.Services.Devices.Algorithm.Templates.MTF.DisplayMTF"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.MTF.DisplayMTF"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Services.Devices.Algorithm.Templates.MTF"
+             xmlns:local="clr-namespace:ColorVision.Engine.Templates.MTF"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:AlgorithmMTF}"
