--- a/Projects/ProjectBlackMura/App.xaml
+++ b/Projects/ProjectBlackMura/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ProjectKB.App"
+﻿<Application x:Class="ProjectBlackMura.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ProjectKB"
+             xmlns:local="clr-namespace:ProjectBlackMura"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <Application.Resources>
         <ResourceDictionary>
