--- a/ColorVision/Projects/ProjectManagerWindow.xaml
+++ b/ColorVision/Projects/ProjectManagerWindow.xaml
@@ -14,16 +14,40 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <Button Content="仓库" Command="{Binding OpenStoreCommand}" Margin="0,0,5,0"/>
-            <Button Content="安装包" Command="{Binding InstallPackageCommand}" Margin="0,0,5,0"/>
-            <hc:ComboBox x:Name="DefalutSearchComboBox" Width="200" HorizontalAlignment="Left"  IsEditable="True" Margin="0,0,5,0" Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.ShowClearButton="True"/>
-            <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="0,0,5,0"/>
-            <Button Content="打开缓存文件夹" Command="{Binding OpenDownloadCacheCommand}" Margin="0,0,5,0"/>
-        </StackPanel>
+        <Grid>
+            <StackPanel Orientation="Horizontal" Margin="5">
+                <Button Content="仓库" Command="{Binding OpenStoreCommand}" Margin="0,0,5,0"/>
+                <Button Content="安装包" Command="{Binding InstallPackageCommand}" Margin="0,0,5,0"/>
+                <hc:ComboBox x:Name="DefalutSearchComboBox" Width="200" HorizontalAlignment="Left"  IsEditable="True" Margin="0,0,5,0" Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.ShowClearButton="True"/>
+                <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="0,0,5,0"/>
+                <Button Content="打开缓存文件夹" Command="{Binding OpenDownloadCacheCommand}" Margin="0,0,5,0"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,5,0">
+                <Button  Command="{Binding EditCommand}" Padding="2" Height="27" Width="27" >
+                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5"  FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
+                        <TextBlock.RenderTransform>
+                            <RotateTransform x:Name="rotateTransform21"/>
+                        </TextBlock.RenderTransform>
+                    </TextBlock>
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.Click">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetName="rotateTransform21" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
+
+            </StackPanel>
+
+        </Grid>
+
         <Grid  Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="660"/>
+                <ColumnDefinition Width="400"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <ListView x:Name="ListViewProjects" Background="Transparent" Margin="5,0,5,5" SelectionChanged="ListViewProjects_SelectionChanged" ItemsSource="{Binding Projects}" Grid.Row="1" Padding="2">
@@ -59,12 +83,8 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:ProjectInfo}">
                                     <StackPanel Orientation="Horizontal">
-                                        <Button Content="Open" Command="{Binding OpenProjectCommand}" Margin="0,0,5,0"/>
-                                        <Button Content="ShortCut" Command="{Binding CreateShortCutCommand}"  Margin="0,0,5,0"/>
-                                        <Button Content="OpenInCmd" Command="{Binding OpenInCmdCommand}"  Margin="0,0,5,0"/>
                                         <Button Content="Delete" Command="{Binding DeleteCommand}"  Margin="0,0,5,0"/>
                                         <Button Content="Update" Command="{Binding UpdateCommand}"  Margin="0,0,5,0"/>
-
                                     </StackPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
@@ -72,16 +92,22 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-
-            <Border x:Name="BorderContent" Style="{DynamicResource BorderModuleArea}" CornerRadius="5" Margin="0,0,5,5" d:DataContext="{d:DesignInstance local:ProjectInfo}" Grid.Column="1">
+            <Border x:Name="BorderContent" Style="{DynamicResource BorderModuleArea}" DataContext="{Binding ElementName=ListViewProjects,Path=SelectedValue}" CornerRadius="5" Margin="0,0,5,5" d:DataContext="{d:DesignInstance local:ProjectInfo}" Grid.Column="1">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="40"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="100"/>
                     </Grid.RowDefinitions>
                     <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding Project.Header}" Grid.Row="0" HorizontalAlignment="Center"/>
                     <TextBox x:Name="TextBoxMsg" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" AllowDrop="True" Text="{Binding Project.Description,Mode=OneWay}" VerticalContentAlignment="Top"  Background="Transparent" BorderThickness="0"/>
+                    <UniformGrid  Grid.Row="2" Columns="2">
+                        <Button Content="Open" Command="{Binding OpenProjectCommand}" Margin="5"/>
+                        <Button Content="ShortCut" Command="{Binding CreateShortCutCommand}"  Margin="5"/>
+                        <Button Content="OpenInCmd" Command="{Binding OpenInCmdCommand}"  Margin="5"/>
+                        <Button Content="Delete" Command="{Binding DeleteCommand}"  Margin="5"/>
+                        <Button Content="Update" Command="{Binding UpdateCommand}"  Margin="5"/>
+                    </UniformGrid>
                 </Grid>
             </Border>
         </Grid>
